--- a/views/read.ejs
+++ b/views/read.ejs
@@ -12,18 +12,18 @@
     <title>Freelancer - Start Bootstrap Theme</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="../stylesheets/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="stylesheets/freelancer.min.css" rel="stylesheet">
+    <link href="../stylesheets/freelancer.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
         
     <!-- board Custom CSS -->
-    <link href="stylesheets/shop-homepage.css" rel="stylesheet">
+    <link href="../stylesheets/shop-homepage.css" rel="stylesheet">
 
     <style>
         .upload {text-align:right;margin-right:20px;}
@@ -172,16 +172,16 @@
     </div>
 
     <!-- jQuery -->
-    <script src="javascripts/jquery.min.js"></script>
+    <script src="../javascripts/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="javascripts/bootstrap.min.js"></script>
+    <script src="../javascripts/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="javascripts/freelancer.min.js"></script>
+    <script src="../javascripts/freelancer.min.js"></script>
 
 </body>
 
