--- a/views/mail.ejs
+++ b/views/mail.ejs
@@ -110,7 +110,7 @@
                                 %>
                                 <tr>
                                     <td class="user_id" name="user_id"><%=item.user_id%></td>
-                                    <td class="mail_title" name="mail_title"><%=item.mail_title%></a></td>
+                                    <td class="mail_title" name="mail_title"><a href="/read/<%=item.mail_no%>"><%=item.mail_title%></a></td>
                                 </tr>
                                 <%
                                         }
