--- a/views/join.ejs
+++ b/views/join.ejs
@@ -135,13 +135,13 @@
                                     <p>Birth</p>
                                 </div>
                                 <div class="col-xs-3">
-                                    <input type="text" class="form-control" placeholder="YYYY" name="year" required>
+                                    <input type="text" class="form-control" placeholder="YYYY" name="year" required maxlength="4">
                                         </div>
                                 <div class="col-xs-3">
-                                    <input type="text" class="form-control" placeholder="mm" name="month" required>
+                                    <input type="text" class="form-control" placeholder="mm" name="month" required maxlength="2">
                                         </div>
                                 <div class="col-xs-3">
-                                    <input type="text" class="form-control" placeholder="dd" name="day" required>
+                                    <input type="text" class="form-control" placeholder="dd" name="day" required maxlength="2">
                                         </div>
                             </div>
                         </div>
