--- a/views/qna.ejs
+++ b/views/qna.ejs
@@ -116,8 +116,8 @@
                                         %>
                                 <tr>
                                     <td class="question_no" name="question_no"><%=item.question_no%></td>
-                                    <td class="question_title" name="question_title"><%=item.question_title%></a></td>
-                                    <td class="question_id" name="question_id"><%=item.question_id%></td>
+                                    <td class="question_title" name="question_title"><a href="/qna/read/<%=item.question_no%>"><%=item.question_title%></a></td>
+                                    <td class="user_id" name="user_id"><%=item.user_id%></td>
                                     <td class="question_done" name="question_done"><%=item.question_done%></td>
                                 </tr>
                                 <%
@@ -130,7 +130,7 @@
                                             for(var j=0;j<rows.length/10;j++){
                                                 
                                             %>
-                                        [<a href="/fnq/<%=j+1%>"><%=j+1%></a>]
+                                        [<a href="/qna/<%=j+1%>"><%=j+1%></a>]
                                         <%
                                             }
                                             %>
