--- a/views/qna_board.ejs
+++ b/views/qna_board.ejs
@@ -121,7 +121,7 @@
                     <div class="row">
                         <div class="form-group col-xs-12 text-center">
                             <button type="submit" class="btn btn-success btn-lg">Upload</button>
-                            <button type="button" class="btn btn-success btn-lg" onclick="document.location.href='/qna'">Back</button>
+                            <button type="button" class="btn btn-success btn-lg" onclick="document.location.href='/qna/1'">Back</button>
                         </div>
                     </div>
                 </form>
