--- a/views/main.ejs
+++ b/views/main.ejs
@@ -63,6 +63,9 @@
                     <li>
                         <a href="mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
                     </li>
+                    <li>
+                        <a href="mkdir">mkdir</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
