--- a/views/material_board.ejs
+++ b/views/material_board.ejs
@@ -124,7 +124,7 @@
                                 <p>File</p>
                             </div>
                             <div class="col-xs-10">
-                                <input type="file" class="form-control" id="material_file">
+                                <input type="file" class="form-control" name="material_file">
                             </div>
                         </div>
                     </div>
