--- a/views/material.ejs
+++ b/views/material.ejs
@@ -114,7 +114,7 @@
                                         %>
                                 <tr>
                                     <td class="material_no" name="material_no"><%=item.material_no%></a></td>
-                                    <td class="material_title" name="material_title"><%=item.material_title%></td>
+                                    <td class="material_title" name="material_title"><a href="/material/<%=item.material_no%>"><%=item.material_title%></a></td>
                                 </tr>
                                 <%
                                     }
