--- a/views/join.ejs
+++ b/views/join.ejs
@@ -21,14 +21,18 @@
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    
+    <script src="javascripts/jquery-3.1.1.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $(".confirmBtn").click(function(){
+                                   var $tmp=$(".idBox").val();
+                                   var $path="/join/confirm/"+$tmp;
+                                   location.href=$path;
+                                   
+            });
+        });
+    </script>
 </head>
 
 <body id="page-top" class="index">
@@ -78,11 +82,11 @@
                                     <p>ID</p>
                                 </div>
                                 <div class="col-xs-8">
-                                    <input type="text" class="form-control" placeholder="ID" name="id" required data-validation-required-message="Click the confirm button.">
+                                    <input type="text" class="form-control idBox" placeholder="ID" value='<%=id%>'name="id" required data-validation-required-message="Click the confirm button.">
                                         <p class="help-block text-danger"></p>
                                         </div>
                                 <div class="col-xs-2">
-                                    <button type="button" class="btn">confirm</button>
+                                    <button type="button" class="btn confirmBtn">confirm</button>
                                 </div>
                             </div>
                         </div>
