--- a/views/qna.ejs
+++ b/views/qna.ejs
@@ -117,7 +117,7 @@
                                 <tr>
                                     <td class="question_no" name="question_no"><%=item.question_no%></td>
                                     <td class="question_title" name="question_title"><a href="/qna/read/<%=item.question_no%>"><%=item.question_title%></a></td>
-                                    <td class="user_id" name="user_id"><%=item.user_id%></td>
+                                    <td class="question_id" name="question_id"><%=item.question_id%></td>
                                     <td class="question_done" name="question_done"><%=item.question_done%></td>
                                 </tr>
                                 <%
