--- a/views/student.ejs
+++ b/views/student.ejs
@@ -108,7 +108,7 @@
                                         <tr>
                                             <td class="user_id" name="user_id"><%=item.user_id%></td>
                                             <td class="student_name" name="student_name"><%=item.student_name%></a></td>
-                                            <td class="user_done" name="user_done"><%=item.user_done%></a></td>
+                                            <td class="user_done" name="user_process"><%=item.user_process%></a></td>
                                         </tr>
                                         <%
                                             }
