--- a/views/fnq.ejs
+++ b/views/fnq.ejs
@@ -50,25 +50,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#"></a>
+                        <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/main">What is Chase?</a>
+                        <a href="#page-top">What is Chase?</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/main#page-top">Manual</a>
+                        <a href="#portfolio">매뉴얼</a>
                     </li>
                     <li>
-                        <a href="/material/1/1">Material</a>
+                        <a href="/material/1/1">자료실</a>
                     </li>
                     <li>
-                        <a href="/fnq/1"><span class="present-page">Q &amp; A</span></a>
+                        <a href="/fnq/1">Q &amp; A</a>
                     </li>
                     <li>
-                        <a href="/mail/1">Mail</a>
+                        <a href="/mail/1">메시지</a>
                     </li>
                     <li>
-                        <a href="/mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
+                        <a href="mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
                     </li>
                 </ul>
             </div>
@@ -140,53 +140,51 @@
     <!-- /.container -->
     <!------------------->
 
-    <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div>
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-4">
+                    <h3>Team Peak</h3>
+                    <p>컴퓨터공학과 201333793 이지은<br>컴퓨터공학과 201433822 양지아<br>컴퓨터공학과 201333596 조창미</p>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3>Contact us</h3>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Twitter</span><i class="fa fa-fw fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social btn-outline"><span class="sr-only">Dribble</span><i class="fa fa-fw fa-dribbble"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3>College</h3>
+                    <p>가천대학교<br><a href="www.gachon.ac.kr">www.gachon.ac.kr</a></p>
                 </div>
             </div>
         </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
-                    </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; CHASE 2017
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
