--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,16 +49,16 @@
                         <a href="#page-top">What is Chase?</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Manual</a>
+                        <a href="#portfolio">매뉴얼</a>
                     </li>
                     <li>
-                        <a href="/material/1/1">Material</a>
+                        <a href="/material/1/1">자료실</a>
                     </li>
                     <li>
                         <a href="/fnq/1">Q &amp; A</a>
                     </li>
                     <li>
-                        <a href="/mail/1">Mail</a>
+                        <a href="/mail/1">메시지</a>
                     </li>
                     <li>
                         <a href="mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
@@ -77,9 +77,8 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="images/profile.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Educational Service</h1>
-                        <hr class="star-light">
-                        <span class="skills">Teacher - Helper - Guru</span>
+                        <span class="skills">생각과 이야기의 끝을 쫓다</span>
+                        <p class="name">CHASE</p>
                     </div>
                 </div>
             </div>
@@ -136,12 +135,11 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>Team Peak</h3>
+                        <p>컴퓨터공학과 201333793 이지은<br>컴퓨터공학과 201433822 양지아<br>컴퓨터공학과 201333596 조창미</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Contact us</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
@@ -161,8 +159,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>College</h3>
+                        <p>가천대학교<br><a href="www.gachon.ac.kr">www.gachon.ac.kr</a></p>
                     </div>
                 </div>
             </div>
@@ -171,7 +169,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; CHASE 2017
                     </div>
                 </div>
             </div>
@@ -198,24 +196,15 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>주진행자</h2>
                             <hr class="star-primary">
                             <img src="images/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <p>1. 수업 전 미리 홈페이지에서 PPT와 보조자료를 다운로드 받아 수업환경을 준비합니다.</p>
+                            <p>2. 보조자료와 매뉴얼을 보조진행자에게 전달합니다.</p>
+                            <p>3. 문제를 진행할 시, 학생들의 답변에 연쇄적으로 질문을 이어갑니다.</p>
+                            <p>4. 필요에 따라 문제의 접근방향을 바꿔줄 수 있을 만한 조건을 제시합니다.</p>
+                            <p>5. 기본적으로 학생들이 생각할 수 있는 시간을 30초 가량 제공합니다.</p>
+                            <p class="item-details">cf. NPC구루가 등장하는 시간은 시작 2분 후 입니다. 이를 참조하여 진행하도록 합니다.</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -235,24 +224,14 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>부진행자</h2>
                             <hr class="star-primary">
                             <img src="images/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <p>1. 솔선수범의 자세로 수업에 참여합니다.</p>
+                            <p>2. 주진행자와 마찬가지로, 필요에 따라 문제의 접근방향을 바꿔줄 수 있을 만한 조건을 제시하도록 합니다.</p>
+                            <p>3. 학생들의 답변에 적극적으로 호응합니다.</p>
+                            <p>4. 학생의 수업 참여에 대한 어드바이스를 할 때는 직접적인 충고나 권유보다 메시지기능을 이용하도록 합니다.</p>
+                            <p>5. 사전에 주진행자로부터 건네받은 보조자료와 매뉴얼을 숙지하도록 합니다.</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -272,24 +251,13 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>학생</h2>
                             <hr class="star-primary">
-                            <img src="imgages/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
-                            <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <img src="images/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <p>CHASE엔 '무조건'적인 정답이 없습니다!</p>
+                            <p>사소한 변화가 때로는 큰 변혁의 기회가 되기도 하듯,</p>
+                            <p>천천히 생각하고, 적극적으로 펼쳐보다 보면</p>
+                            <p>미처 생각지 못했던 또 다른 답이 여러분에게 보일 것입니다!</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -385,7 +353,7 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                            <img src="images/portfolio/submarine.png" class="img-responsive img-centered" alt="">
+                            <img src="images/portfolio/circus.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
