--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -50,25 +50,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#"></a>
+                        <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/main">What is Chase?</a>
+                        <a href="#page-top">What is Chase?</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/main#page-top">Manual</a>
+                        <a href="#portfolio">매뉴얼</a>
                     </li>
                     <li>
-                        <a href="/material/1/1">Material</a>
+                        <a href="/material/1/1">자료실</a>
                     </li>
                     <li>
                         <a href="/fnq/1">Q &amp; A</a>
                     </li>
                     <li>
-                        <a href="/mail/1">Mail</a>
+                        <a href="/mail/1">메시지</a>
                     </li>
                     <li>
-                        <a href="/mypage"><span class="loginid"><%=login_id%></span><span class="present-page">님의 마이페이지</span></a>
+                        <a href="mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio/cabin.png" class="img-responsive" alt="Cabin">
+                        <img src="images/portfolio/game.png" class="img-responsive" alt="Cabin">
                     </a>
                     <p class="title">개인정보 수정</p>
                 </div>
@@ -105,7 +105,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio/cake.png" class="img-responsive" alt="Slice of cake">
+                        <img src="images/portfolio/safe.png" class="img-responsive" alt="Slice of cake">
                     </a>
                     <p class="title">학생 관리</p>
                 </div>
@@ -116,7 +116,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/portfolio/circus.png" class="img-responsive" alt="Circus tent">
+                        <img src="images/portfolio/submarine.png" class="img-responsive" alt="Circus tent">
                     </a>
                     <p class="title">내 질문</p>
                 </div>
@@ -133,12 +133,11 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>Team Peak</h3>
+                        <p>컴퓨터공학과 201333793 이지은<br>컴퓨터공학과 201433822 양지아<br>컴퓨터공학과 201333596 조창미</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Contact us</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
@@ -158,8 +157,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>College</h3>
+                        <p>가천대학교<br><a href="www.gachon.ac.kr">www.gachon.ac.kr</a></p>
                     </div>
                 </div>
             </div>
@@ -168,7 +167,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; CHASE 2017
                     </div>
                 </div>
             </div>
