--- a/views/send.ejs
+++ b/views/send.ejs
@@ -49,25 +49,25 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden">
-                        <a href="#"></a>
+                        <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/main">What is Chase?</a>
+                        <a href="#page-top">What is Chase?</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/main#page-top">Manual</a>
+                        <a href="#portfolio">매뉴얼</a>
                     </li>
                     <li>
-                        <a href="/material/1/1">Material</a>
+                        <a href="/material/1/1">자료실</a>
                     </li>
                     <li>
                         <a href="/fnq/1">Q &amp; A</a>
                     </li>
                     <li>
-                        <a href="/mail/1"><span class="present-page">Mail</span></a>
+                        <a href="/mail/1">메시지</a>
                     </li>
                     <li>
-                        <a href="/mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
+                        <a href="mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
                     </li>
                 </ul>
             </div>
@@ -145,12 +145,11 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>Team Peak</h3>
+                        <p>컴퓨터공학과 201333793 이지은<br>컴퓨터공학과 201433822 양지아<br>컴퓨터공학과 201333596 조창미</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Contact us</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
@@ -170,8 +169,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>College</h3>
+                        <p>가천대학교<br><a href="www.gachon.ac.kr">www.gachon.ac.kr</a></p>
                     </div>
                 </div>
             </div>
@@ -180,7 +179,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; CHASE 2017
                     </div>
                 </div>
             </div>
