--- a/views/join.ejs
+++ b/views/join.ejs
@@ -21,8 +21,9 @@
     <link href="stylesheets/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <script type = "text/javascript" src="/public/javascripts/jquery-3.1.1.min.js"></script>-->
-    <script src="javascripts/jquery-3.1.1.min.js"></script>
+   <!-- <script type = "text/javascript" src="/public/javascripts/jquery-3.1.1.min.js"></script>-->
+   <!--   <script src="javascripts/jquery-3.1.1.min.js"></script>-->
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   	<script>
         $(document).ready(function(){
             $(".confirmBtn").click(function(){
