--- a/views/main.ejs
+++ b/views/main.ejs
@@ -61,7 +61,7 @@
                         <a href="/mail/1">메시지</a>
                     </li>
                     <li>
-                        <a href="mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
+                        <a href="/mypage"><span class="loginid"><%=login_id%></span>님의 마이페이지</a>
                     </li>
                 </ul>
             </div>
